packages/observability/setup/network-policy-perses-operator-access.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-perses-operator-access
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/managed-by: perses-operator
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: perses-operator
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-operators
  policyTypes:
    - Ingress
